--- a/eShopSolution/eShopSolution.AdminApp/Views/Product/Index.cshtml
+++ b/eShopSolution/eShopSolution.AdminApp/Views/Product/Index.cshtml
@@ -51,7 +51,6 @@
             // You can use JavaScript/jQuery to update the DOM dynamically
             console.log(product,i);
         });
-
         connection.start().then(function () {
             console.log("Connected to the product hub.");
         }).catch(function (err) {
@@ -65,6 +64,7 @@
     <h1 class="mt-4">Danh sách sản phẩm</h1>
     <ol class="breadcrumb mb-4">
         <li class="breadcrumb-item"><a href="/">Trang chủ</a></li>
+        <li class="breadcrumb-item active">Sản phẩm</li>
         <li class="breadcrumb-item active">Danh sách sản phẩm</li>
     </ol>
     <div class="card mb-12">
