--- a/FE/src/app/routes/about-us/about-us.component.html
+++ b/FE/src/app/routes/about-us/about-us.component.html
@@ -87,6 +87,8 @@
 <!--  </div>-->
 
 <!--</section>-->
-<!--<agm-map [latitude]="lat" [longitude]="lng">-->
-<!--  <agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>-->
-<!--</agm-map>-->
+<agm-map [latitude]="lat" [longitude]="lng">
+  <agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>
+</agm-map>
+
+
